# docs.despace-qf.com

./: .gitignore  README.md  pyproject.toml
grants_applications/: OCTANT.MD  OCTANT_META.md
source/: FAQ.md  conf.py  current-round-info.md  fundrasing-the-game.md  how-to-donate.md  how-to-join.md  index.rst  marketing.md  round-structure.canvas
test_round/: FAQ.MD  marketing.md  round-plan.md
