[tool.poetry]
name = "docs-despace-qf-com"
version = "0.1.0"
description = ""
authors = ["Red Boumghar <red@parametry.ai>"]
readme = "README.md"
packages = [{include = "docs"}]

[tool.poetry.dependencies]
python = "^3.10"
sphinx-rtd-theme = "^1.3.0"
myst-parser = "^2.0.0"
sphinx-design = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
